# neuromanifold-gpt

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  .pre-commit-config.yaml  .subtask-1-4-completed.txt  2.md  ACCEPTANCE_CRITERIA_VALIDATION.md  BENCHMARK_RESULTS.md  COMPATIBILITY.md  DISTILLATION_TEST.md  FINAL_COMPLETION_REPORT.md  GRADIENT_CHECKPOINTING_VERIFICATION.md  HPO_INTEGRATION_TEST_RESULTS.md  KAUFMANN_COMPILE_BENCHMARK_RESULTS.md  LENGTH_GENERALIZATION_RESULTS.md  NAS_E2E_VERIFICATION_REPORT.md  POSITION_EMBEDDINGS_BENCHMARK.md  README.md  SESSION_SUMMARY.md  SPECTRAL_COMPILE_RESULTS.md  SUBTASK-1-5-SUMMARY.md  SUBTASK_1_4_VERIFICATION.md  SUBTASK_4_2_SUMMARY.md  SUBTASK_6-4_COMPLETION_SUMMARY.md  SUBTASK_SUMMARY.md  TESTING_BLOCKER.md  TEST_RESULTS.md  TRAINING_RESUMPTION_TEST.md  UPGRADE.md  VERIFICATION_GUIDE.md  VERIFICATION_NOTE.md  VERIFICATION_README.md  VERIFICATION_REPORT.md  VERIFICATION_RESULTS.md  bench.py  bench_ns_wmn.py  bench_position_embeddings.py  benchmark_kaufmann_compile.py  benchmark_output.txt  (+85 more)
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
config/: README.md  eval_lambada.py  hpo_best.py  optimized_hyperparams.py  ralph_iter1.py  ralph_iter10.py  ralph_iter17.py  ralph_iter18.py  ralph_iter21.py  ralph_iter22.py  ralph_iter25.py  ralph_iter28.py  ralph_iter29.py  ralph_iter30.py  ralph_iter31.py  ralph_iter35.py  ralph_iter37.py  ralph_iter38.py  ralph_iter4.py  ralph_iter40.py  ralph_iter42.py  ralph_iter46.py  ralph_iter48.py  ralph_iter5.py  ralph_iter50.py  ralph_iter52.py  ralph_iter53.py  ralph_iter56.py  ralph_iter6.py  ralph_iter60.py  ralph_iter63.py  ralph_iter64.py  ralph_iter66.py  ralph_iter67.py  ralph_iter68.py  ralph_iter72.py  ralph_iter76.py  ralph_iter78.py  ralph_iter8.py  ralph_iter80.py  (+14 more)
config/finetune/: README.md  gpt2_large.py  gpt2_medium.py  gpt2_small.py  gpt2_xl.py
config/legacy/: README.md  ralph_iter107.py  ralph_iter11.py  ralph_iter115.py  ralph_iter116.py  ralph_iter12.py  ralph_iter13.py  ralph_iter14.py  ralph_iter15.py  ralph_iter16.py  ralph_iter2.py  ralph_iter20.py  ralph_iter23.py  ralph_iter24.py  ralph_iter27.py  ralph_iter3.py  ralph_iter32.py  ralph_iter39.py  ralph_iter41.py  ralph_iter43.py  ralph_iter45.py  ralph_iter47.py  ralph_iter54.py  ralph_iter58.py  ralph_iter59.py  ralph_iter61.py  ralph_iter62.py  ralph_iter65.py  ralph_iter7.py  ralph_iter70.py  ralph_iter74.py  ralph_iter88.py  test_dashboard_shakespeare.py  train_general_streaming.py  train_hybrid_v22.py  train_modular_llama_style.py  train_modular_rmsnorm.py  train_modular_swiglu.py  train_reasoning_v21.py
data/shakespeare_char/: prepare_glove.py
docs/: CALLBACK_MIGRATION_GUIDE.md  checkpoint-management.md  config-migration-guide.md  configuration-reference.md  configuration.md  finetuning-guide.md  gpu_compatibility.md  hpo_guide.md  initialization_strategies.md  ralph-config-system.md  stability_toolkit.md
docs/api/: system2_reasoning.md
docs/examples/: dag_planner_usage.py  hierarchical_memory_usage.py  imagination_usage.py
examples/: evaluate_components.py  export_checkpoint_metadata.py  nas_export_best.py  nas_search.py  ralph_config_usage.py  train_with_component_metrics.py
neuromanifold_gpt/: __init__.py  bench_attention_variants.py  bench_fhn_flash_fusion.py  bench_fhn_fusion.py  bench_kan_vs_swiglu.py  bench_mhc_fusion.py  configurator.py  errors.py  sample_nanogpt.py  train.py  train_nanogpt.py
neuromanifold_gpt/benchmarks/: __init__.py  attention_backends.py  attention_memory.py  attention_quality.py  attention_speed.py  bench_fhn_chunked_memory.py  bench_sinkhorn_early_stop.py  datasets.py  lm_eval_adapter.py  run_all.py  test_benchmarks.py  visualize.py  zero_shot.py
neuromanifold_gpt/callbacks/: __init__.py  anomaly_detector.py  gradient_monitor.py  loss_monitor.py  memory_monitor.py  stability_toolkit.py  throughput_monitor.py  training_dashboard.py  training_health.py  wave_monitor.py
neuromanifold_gpt/cli/: __init__.py  diagnose.py  help_formatter.py
neuromanifold_gpt/config/: __init__.py  base.py  block_config.py  compat.py  loader.py  ralph_base.py  ralph_builder.py  training.py  validation.py  wave_manifold_config.py
neuromanifold_gpt/data/: __init__.py  prepare_openwebtext.py  prepare_shakespeare.py  streaming.py  synthetic_solitons.py
neuromanifold_gpt/debug/: debug_fhn_attention.py  debug_init.py  debug_nvcc.py  debug_sdr_collapse.py  debug_sdr_collapse_v2.py  debug_sdr_long_train.py  diagnose_nan.py  trace_gradient_nan.py
neuromanifold_gpt/distributed/: training.py
neuromanifold_gpt/evaluation/: __init__.py  component_metrics.py  fhn_metrics.py  kan_metrics.py  memory_metrics.py  mtp_metrics.py  sdr_metrics.py  spectral_metrics.py
neuromanifold_gpt/experiments/: ablation.py
neuromanifold_gpt/hpo/: __init__.py  optuna_search.py  pruning.py  search_space.py  test_optuna_search.py  test_pruning.py  test_search_space.py  test_visualize.py  visualize.py
neuromanifold_gpt/inference/: optimization.py
neuromanifold_gpt/model/: __init__.py  block.py  context_encoder.py  gpt.py  hybrid_reasoning.py  imagination.py  manifold.py  mhc.py  mhc_fused.py  mhc_utils.py  neuro_symbolic_wave.py  sdr_ops.py  semantic_folding.py  semantic_retina.py  sinkhorn.py  spectral.py  system_two_mixin.py  wave_manifold_block.py  wave_manifold_gpt.py
neuromanifold_gpt/nas/: __init__.py  evaluator.py  export.py  search_space.py  searcher.py  test_evaluator.py  test_export.py  test_search_space.py
neuromanifold_gpt/profiling/: benchmark_memory_retrieval.py  benchmark_memory_retrieval_standalone.py  complexity.py  profile_complete.py  profile_dag_planner.py  profile_fhn_allocation.py  profile_fhn_debug.py  profile_fhn_isolate.py  profile_fhn_simple.py  profile_imagination.py  profile_minimal.py  profile_mtp.py  profile_neuromanifold.py  profile_neuromanifold_fast.py  profile_neuromanifold_v2.py  (+1 more)
scripts/: auto_merge.py  migrate_ralph_configs.py
(+261 files in other folders)
