[project]
name = "neuromanifold-gpt"
version = "0.1.0"
description = "NeuroManifoldGPT: Soliton-Spectral Attention with SDR Memory"
requires-python = ">=3.10"
# NOTE: For reproducible builds with pinned versions, use requirements.txt
# The >= constraints below provide flexibility for library users
# See COMPATIBILITY.md for tested configurations and UPGRADE.md for upgrade guidance
dependencies = [
    "torch>=2.0",
    "einops>=0.7",
    "lightning>=2.0",
    "scipy>=1.10",
    "loguru>=0.7",
    "rich>=13.0",
]

[project.optional-dependencies]
# NOTE: For reproducible builds with pinned dev dependencies, use requirements-dev.txt
dev = ["pytest>=7.0", "pytest-cov", "ruff", "black"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["neuromanifold_gpt*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = ["tiktoken", "tiktoken.*", "lm_eval.*"]
ignore_missing_imports = true
