[project]
name = "neuromanifold-gpt"
version = "0.1.0"
description = "NeuroManifoldGPT: Soliton-Spectral Attention with SDR Memory"
requires-python = ">=3.10"
# NOTE: For reproducible builds with pinned versions, use requirements.txt
# The >= constraints below provide flexibility for library users
# See COMPATIBILITY.md for tested configurations and UPGRADE.md for upgrade guidance
dependencies = [
    "torch>=2.0",
    "triton>=2.2",
    "einops>=0.7",
    "xformers>=0.0.25",
    "lightning>=2.0",
    "scipy>=1.10",
    "loguru>=0.7",
    "rich>=13.0",
]

[project.optional-dependencies]
# NOTE: For reproducible builds with pinned dev dependencies, use requirements-dev.txt
dev = ["pytest>=7.0", "pytest-cov", "ruff", "black"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["neuromanifold_gpt*"]

[tool.ruff]
# Ruff linting configuration
line-length = 88  # Match black's default line length
target-version = "py310"  # Match project minimum Python version

# Enable rule categories
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "N",   # pep8-naming
]

# Ignore specific rules if needed
ignore = []

# Exclude patterns
exclude = [
    ".git",
    ".auto-claude",
    "__pycache__",
    "*.egg-info",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Show an enumeration of all autofixed violations
show-fixes = true

[tool.ruff.per-file-ignores]
# Ignore import errors in test files
"**/{tests,test_*}/*" = ["F401"]

[tool.ruff.isort]
# Use Google-style import sorting
force-single-line = false
force-sort-within-sections = false
known-first-party = ["neuromanifold_gpt"]

[tool.black]
# Black code formatting configuration
line-length = 88  # Match ruff's line length
target-version = ['py310']  # Match project minimum Python version

# Exclude patterns
exclude = '''
/(
    \.git
  | \.auto-claude
  | __pycache__
  | \.egg-info
  | \.pytest_cache
  | \.ruff_cache
  | build
  | dist
)/
'''
